<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_round">

        <ImageView
            android:id="@+id/bsafe_img"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/app_logo_white" />

        <LinearLayout
            android:id="@+id/linlay_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/bsafe_img"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_15sdp">

            <TextView
                android:id="@+id/signin_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:fontFamily="@font/aver"
                android:text="@string/sign_in_txt"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_13sdp"
                android:layout_gravity="center"
                android:src="@drawable/app_name_white_img"/>

        </LinearLayout>

    </RelativeLayout>




    <EditText
        android:id="@+id/edt_mobile_no"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/_7sdp"
        android:hint="Mobile No."
        android:textColorHint="@android:color/darker_gray"
        android:shadowColor="@color/blue"
        android:drawableLeft="@drawable/ic_baseline_phone_"
        android:drawablePadding="@dimen/_5sdp"
        android:background="@drawable/shape_round_corner_rectangle"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edt_mobile_no"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_7sdp"
        android:inputType="textPassword"
        android:hint="Password"
        android:textColorHint="@android:color/darker_gray"
        android:shadowColor="@color/blue"
        android:outlineSpotShadowColor="@color/blue"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/_5sdp"
        android:background="@drawable/shape_round_corner_rectangle"/>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edt_password"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:backgroundTint="@color/red"
        android:background="@drawable/button_shape"/>

    <TextView
        android:id="@+id/forgot_pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_alignLeft="@id/edt_password"
        android:padding="@dimen/_5sdp"
        android:fontFamily="@font/aver"
        android:text="@string/forgot_pass"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/red"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rectangle_round_top_corners"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/signup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aver"
            android:padding="@dimen/_5sdp"
            android:text="@string/sign_up_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/signup_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aver"
            android:padding="@dimen/_5sdp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn_signin"
        android:layout_marginTop="@dimen/_10sdp">

        <ImageView
            android:id="@+id/fb_icon_img"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_35sdp"
            android:src="@drawable/facebook"
            />

        <ImageView
            android:id="@+id/insta_icon_img"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/instagram"
            />


        <ImageView
            android:id="@+id/twitter_icon_img"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/twitter"
            />

        <ImageView
            android:id="@+id/youtube_icon_img"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/youtube"
            />
    </LinearLayout>

</RelativeLayout>