<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fadedWhite"
    tools:context=".activities.PaymentMehodActivity">

    <TextView
        android:id="@+id/txt_select_time_slot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_1sdp"
        android:padding="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/time_and_slot"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:background="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_vw_cart_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/white">

        <TextView
            android:id="@+id/txt_bill_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="Bill Details"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"/>

        <View
            android:id="@+id/line_a"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@id/txt_bill_details"
            android:background="@color/fadedWhite"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/line_a">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_7sdp"
                android:paddingRight="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="Item Total"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_7sdp"
                android:paddingRight="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="Delivery Charge"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_7sdp"
                android:paddingRight="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="Total"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/line_a">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_7sdp"
                android:paddingRight="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="RS 250"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_7sdp"
                android:paddingRight="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="RS 20"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_7sdp"
                android:paddingRight="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="RS 270"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_apply_coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:text="Apply Coupon"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:background="@color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/white">

        <TextView
            android:id="@+id/txt_select_pay_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_7sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/select_pay_method"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@id/txt_select_pay_method"
            android:background="@color/fadedWhite"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:layout_below="@id/line"
            android:id="@+id/radio_group_pay_method">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingLeft="@dimen/_7sdp"
                android:text="Cash On Delivery"
                android:buttonTint="@color/red"
                android:id="@+id/radio_btn_cod"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:paddingLeft="@dimen/_7sdp"
                android:paddingRight="@dimen/_15sdp"
                android:text="Pay Online"
                android:buttonTint="@color/red"
                android:id="@+id/radio_btn_tomorrow"/>
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/red">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_amount_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:paddingTop="@dimen/_3sdp"
                    android:paddingLeft="@dimen/_7sdp"
                    android:text="@string/pay_amount"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"/>
                <TextView
                    android:id="@+id/txt_actual_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:padding="@dimen/_7sdp"
                    android:text="RS 270"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"/>

            </LinearLayout>


            <TextView
                android:id="@+id/txt_place_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:layout_alignParentBottom="true"
                android:padding="@dimen/_7sdp"
                android:paddingRight="@dimen/_15sdp"
                android:text="Place Order >"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"/>


        </LinearLayout>

    </RelativeLayout>
</LinearLayout>